# mipt-bachelor-cpp

./: README.md
1-build/: README.md  a.out  build-commands.md  linux-commands.md  main.cpp
1-build/00-hello/: Makefile  main.cpp
1-build/00-hello-pro/: Makefile
1-build/00-manual/: Makefile  main.cpp
1-build/01-make-vars/: Makefile  main.cpp
1-build/02-make-multi/: Makefile
1-build/02-make-multi/include/math/: ops.h
1-build/02-make-multi/src/: main.cpp
1-build/02-make-multi/src/math/: ops.cpp
1-build/03-make-lib/: Makefile
1-build/03-make-lib/include/calc/: calc.h
1-build/03-make-lib/src/: main.cpp
1-build/03-make-lib/src/calc/: calc.cpp
1-build/04-cmake-basic/: CMakeLists.txt  main.cpp
1-build/05-cmake-targets/: CMakeLists.txt
1-build/05-cmake-targets/src/: main.cpp
1-build/06-cmake-shared/: CMakeLists.txt
1-build/06-cmake-shared/src/: main.cpp
1-build/06-cmake-shared/src/math/: ops.cpp
1-build/07-dyn-lib/: CMakeLists.txt  app  libmath.dylib  main.cpp  math_lib.cpp
functional/enum/: 01-basic-enum.cpp  02-enum-class.cpp  03-advanced.cpp  README.md
functional/func/: 01-function-pointers.cpp  02-std-function.cpp  03-lambdas.cpp  README.md
sfml-tutorial/: QUICKSTART.md  README.md
sfml-tutorial/example1-basic-window/: CMakeLists.txt  README.md  main.cpp
sfml-tutorial/example2-sprites-textures/: CMakeLists.txt  README.md  main.cpp
sfml-tutorial/example2-sprites-textures/resources/: README.md
sfml-tutorial/example3-buttons/: Button.cpp  Button.h  CMakeLists.txt  README.md  main.cpp
sfml-tutorial/example3-buttons/resources/: README.md
stl/: list.cpp  set.cpp  unordered_map.cpp  vector.cpp
stl/list_tasks/: CMakeLists.txt  README.md  tasks.cpp  tasks.h  tests.cpp
stl/set_tasks/: CMakeLists.txt  README.md  tasks.cpp  tasks.h  tests.cpp
stl/unordered_map_tasks/: CMakeLists.txt  README.md  tasks.cpp  tasks.h  tests.cpp
stl/vector_tasks/: CMakeLists.txt  README.md  tasks.cpp  tasks.h  tests.cpp
templates/templates-1/: 00-problem.cpp  01-function-templates.cpp  02-class-templates.cpp  README.md  Template.cpp  Template.h  main.cpp
